name:                haskell-challenges
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: Haskell, "Dynamic Programming"
  exposed-modules:
      Fibonacci
  build-depends: base >=4.7 && <5
  default-language: Haskell2010

executable benchmark
  main-is: benchmark.hs
  hs-source-dirs: Haskell, "Dynamic Programming"
  build-depends: base >=4.7 && <5, criterion
  default-language: Haskell2010

